add cpubinding for AMD EPYC Genoa or something

--- a/parameters/misc/cpubinding.conf
+++ b/parameters/misc/cpubinding.conf
@@ -352,3 +352,10 @@ thr=4x8 NUMANode=>1x2 Core=>4x4
 thr=8x4 NUMANode=>2x1 Core=>4x4
 thr=16x2 NUMANode=>2x1 Core=>8x2
 thr=32x1 NUMANode=>2x1 Core=>16x1
+
+# single socket AMD EPYC 9554
+[Package:1 [NUMANode] Die:8 @merge_caches Core:8 @group_PU]
+# this probably won't work so well for nullspace=right ?
+thr=8x8 Die=>8x1 Core=>1x8 PU*2=>1x1
+# not sure about this
+#thr=8x8 Die=>4x2 Core=>2x4 PU*2=>1x1
